2002-01-22  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* msgc.pl (generateDescriptorClass): when generating
	getFieldStructPointer(): use getter function of message class,
	implies to get the pointer to the message class first.

2002-01-17  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* msgc.pl: added surrounding #ifndef/#define/#endif construct to
	_n.h file generation to avoid multiple inclusion. Therefore
	introduced new variable $hdef that holds the macro string

2002-01-16  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* nedcwrapper.sh: strip all command line arguments except the last
	one so that only the ned file name is left. Use this for running
	grep and perl.

2001-10-26 Andras Varga

	* ebnf.y, jar_expr.c, jar_lib.c, jar_func.h, jar_lib.h: implemented
        that an expression may refer to a submodule parameter. Syntax:
        submod.par or submod[index].par. Limitations: index may not be 
        an expression itself (must be constant, for-variable or (submodule)
        parameter); the generated expression is of 'anytype' (no type-check).

2001-10-06 Andras Varga

	* msgc.pl msgtest.ned msgdoc.txt nedcwrapper.sh: checked in files for
        experimental message subclassing. Read msgdoc.txt for instructions on
        how to try it.

2001-07-11 Andras Varga

	* ebnf.y: Eric Wu's Tru64/MPI port. Tru64 needs extra #includes.

2001-03-10  Andras Varga

	* ------ omnetpp-2.1 released ------

	* Borland C++ support removed: I deleted the project files
	(*.ide). I added equivalent Makefile.bc files (generated from the
	BC IDE), but they are completely unsupported at the moment. If
	there's interest, it's possible that later I'll add makefiles for
	the free command-line bc5.5 compiler.


2001-01-16  Andras Varga

	* ------ omnetpp-2.0p1 released ------

	* ------ omnetpp-2.0 released ------

	* disabled heapcheck in jar_mem.c (this makes nedc a lot faster if
	compiled with Borland C++)

	* added version mismatch check to generated _n.cc files
