@@ -1,3 +1,8 @@
+2002-01-23  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
+
+	* msgc.pl (generateClass): Calls to setOwner() for cObjects and
+	cObject arrays inside of constructors.
+
 2002-01-22  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
 
 	* msgc.pl (generateDescriptorClass): when generating
